fix: to plain README only

--- a/bootcamps/09-tdd/README
+++ b/bootcamps/09-tdd/README
@@ -1,9 +1,6 @@
-## GOM09 - Test Drive Development with Golang
+GOM09 - Test Drive Development with Golang
 
-### Learning Outcome
-Peserta pelatihan diharapkan dapat menguasai konsep dan praktik Test Driven Development (TDD) dalam pengembangan backend menggunakan Golang melalui modul ini. Mereka akan mempelajari pengenalan pengujian (testing) dan prinsip TDD, melaksanakan unit testing dengan Go untuk menguji fungsi-fungsi individu, menjalankan integration testing untuk menguji interaksi antar komponen, mengimplementasikan pengujian pada HTTP handler dan middleware untuk memastikan fungsionalitas HTTP server, melakukan pengujian pada interaksi dengan database menggunakan teknik stubbing atau mocking, serta menerapkan teknik test coverage dan benchmarking untuk mengukur kualitas dan kinerja kode yang dikembangkan.
-
-### Learning Objective
+Objectiveness
 - Pengenalan Testing
 - Unit Testing dengan Go
 - Integration Testing
@@ -12,14 +9,3 @@ Peserta pelatihan diharapkan dapat menguasai konsep dan praktik Test Driven Deve
 - Testing pada Database
 - Mocking
 - Test Coverage dan Benchmarking
-
-### Teaching Method
-- Self Paced Learning
-- Project Based Learning
-- Expert Class
-
-### Assessment Method
-- Pre-Test
-- Quiz
-- Post-Test (HOTS)
-- Mini Capstone Project
